--- a/Code/templates/index.html
+++ b/Code/templates/index.html
@@ -1,63 +1,200 @@
 <!DOCTYPE html>
+<meta charset="utf-8">
 <html lang="en">
-
 <head>
-  <title>Trypod-Podcast Data Interpretation</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-{#    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">#}
-{#    <script src="https://d3js.org/d3.v5.min.js"></script>#}
-    <script src="https://d3js.org/d3.v4.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/holtzy/D3-graph-gallery@master/LIB/d3-scale-radial.js"></script>
+  <title>Shark Tank</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+{#  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"#}
+{#    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">#}
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+  <link rel="stylesheet" href="../static/css/dc.css">
+  {#    <script src="https://d3js.org/d3.v5.min.js"></script>#}
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/crossfilter/1.3.12/crossfilter.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/dc/4.0.5/dc.min.js"></script>
+  <script src="https://d3js.org/d3.v4.js"></script>
+  <script>
+    var d3v4 = window.d3;
+    window.d3 = null;
+  </script>
+  <script src="https://d3js.org/d3.v3.js"></script>
+  <script>
+    var d3v3 = window.d3;
+    window.d3 = null;
+  </script>
+  <script src="https://cdn.jsdelivr.net/gh/holtzy/D3-graph-gallery@master/LIB/d3-scale-radial.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+    integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+    integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+    crossorigin="anonymous"></script>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.7.1/d3-tip.min.js"></script>
-    <link rel="stylesheet" href="../static/css/style.css">
+  <link rel="stylesheet" href="../static/css/style.css">
 </head>
-
 <body>
-<div class="content">
-  <div class="container-fluid">
-      <div class="row">
+  <div class="content">
+    <div class="container-fluid">
+      <div class="row" >
         <div class="col-sm-12 col-md-12">
-            <div class="box">
-                <div id="myheader" class="jumbotron text-center">
-                        <div id="logo">
-                            <img src="../static/Images/Logo.png" height="150" width="100" postion:fixed; top:0; left:0; ></img>
-                        </div>
-                        <div postion:fixed; top:10; right:5; style="float: right">
-                            <label for="cars">Select a podcast Category:</label>
-                                    <select name="podcasts" id="podcasts">
-                                      <option value="arts">Arts</option>
-                                      <option value="music">Music</option>
-                                      <option value="education">Education</option>
-                                      <option value="technology">Technology</option>
-                                    </select>
-                        </div>
-                        <h1>We try podcasts so you don't have to!!</h1>
-                </div>
-                    <div class="box">
-                       <h3>Latest Mars News:</h3>
-                    </div>
-        </div>
-    </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-12 col-md-8 ">
-            <div id="my_dataviz">
-          <!-- We append our chart here. -->
+          <div class="box">
+            <div id="myheader" style=background-image:url("../static/Images/Sharkback1.jpg")>
+              <header>
+                  <h1>Sharks from Tank Sharks</h1>
+                  <h2>Click to view the shark</h2>
+                  <h3>And link to their web page!</h3>
+              </header>
+              {#<div postion:fixed; top:10; right:5; style="float: right">
+                <label for="cars">Select a podcast Category:</label>
+                <select name="podcasts" id="podcasts">
+                  <option value="arts">Arts</option>
+                  <option value="music">Music</option>
+                  <option value="education">Education</option>
+                  <option value="technology">Technology</option>
+                </select>
+              </div>#}
+              <div id="vis" style="align-content: center; margin-left: 15%;"></div>
             </div>
+          </div>
         </div>
+      </div>
+      <div class="col-sm-12 col-md-8 ">
+      <span id="d3v4VarVer">
+        <div id="my_dataviz">
+          <strong>Select a Shark</strong>
+          <span class="reset" style="display: none;">Selected: <span class="filter"></span></span>
+          <a class="reset" href="javascript:sharkchart.filterAll();dc.redrawAll();" style="display: none;">reset</a>
+          <div class="clearfix"></div>
 
+        </div>
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-8">
+            <div id="my_dataviz1">
+              <strong>Select a Category</strong>
+              <span class="reset" style="display: none;">Selected: <span class="filter"></span></span>
+              <a class="reset" href="javascript:sharkCatchart.filterAll();dc.redrawAll();"
+                style="display: none;">reset</a>
+              <div class="clearfix"></div>
+            </div>
+          </div>
+
+            <div class="col-lg-4">
+              <div id="table-area" class="">
+                <table id="summary-table" >
+                  <tbody></tbody>
+                </table>
+              </div>
+            </div>
+          </div>
+        </div>
+      </span>
+      </div>
     </div>
   </div>
-</div>
-<script type="text/javascript" src="../static/js/app.js"></script>
+ <script type="text/javascript" src="../static/js/dc.min.js"></script>
+ <script type="text/javascript" src="../static/js/app.js"></script>
+{# <script type="text/javascript" src="../static/js/appdc.js"></script>#}
+ {#<script>
+     // set the dimensions and margins of the graph
+var margin = {top: 100, right: 0, bottom: 0, left: 150},
+    width = 700 - margin.left - margin.right,
+    height = 550 - margin.top - margin.bottom,
+    innerRadius = 90,
+    outerRadius = Math.min(width, height) / 2;   // the outerRadius goes from the middle of the SVG area to the border
+
+
+// append the svg object
+var svg = d3.select("#my_dataviz")
+  .append("svg")
+  .attr("width", width + margin.left + margin.right)
+  .attr("height", height + margin.top + margin.bottom)
+  .append("g")
+  .attr("transform", "translate(" + (width / 2 + margin.left) + "," + (height / 2 + margin.top) + ")");
+
+
+// Declaring Variables
+  var sharkchart = dc.rowChart("#my_dataviz");
+  var sharkCatchart = dc.rowChart("#my_dataviz1");
+  var body = d3.select("#summary-table>tbody");
+
+// Reading the data
+d3.json( 'http://localhost:5000/api/v1/deals/sharkscategory/all', function(data) {
+
+  console.log(data);
+
+  // Crossfilter
+  var ndx = crossfilter(data);
+  var all = ndx.groupAll();
+
+  // Declaring Dimesions and Groups
+  var sharkDim = ndx.dimension(function (d) { return d["Shark"]; });
+  var sharkgroup = sharkDim.group();
+
+  var sharkCatDim = ndx.dimension(function (d) {  return d["Category"]; });
+  var sharkCatgroup = sharkCatDim.group();
+
+  // On Click of Category display table
+  function renderTable(key){
+    d3.json("http://localhost:5000/api/v1/deals/sharkscategory/summary",function(data) {
+      // Empty the table
+      console.log(data);
+      body.html("")
+
+      // Filter based on the selection
+      function filterK(summaryData) {
+        return summaryData.Category === key;
+      }
+      var filteredData = data.filter(filterK);
+
+      // appending <tr> and <td>
+      filteredData.forEach(function (record) {
+        Object.entries(record).forEach(function ([key, value]) {
+            var row = body.append('tr')
+                          .text(key)
+                          .append('td')
+                          .text(value)
+        });
+     });
+
+    })
+
+  };
+
+
+
+  // Drawing the chart
+  sharkchart
+    .dimension(sharkDim)
+    .group(sharkgroup)
+    .elasticX(true);
+
+  sharkCatchart
+    .height(400)
+    .dimension(sharkCatDim)
+    .group(sharkCatgroup)
+    .elasticX(true)
+    //.data(function (group) { return group.top(10)});
+
+
+  sharkCatchart.on('filtered.monitor', function(chart, filter) {
+    renderTable(filter);
+  });
+
+
+    // dc.renderAll();
+    sharkchart.render();
+    sharkCatchart.render();
+
+});
+ </script>#}
 </body>
+
 </html>
