--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,5 @@
 /* Giving the body the specified background color, adding font sizes for the h1 and h3 elements we'll be using */
-@import url(http://fonts.googleapis.com/css?family=Source+Code+Pro:400,600);
+@import url(https://fonts.googleapis.com/css?family=Source+Code+Pro:400,600);
       body {font-family: "Source Code Pro", Consolas, monaco, monospace; line-height: 160%; font-size: 16px;  margin: 0; }
       path.link {
         fill: none;
